Add bower.json and set version 0.2.0

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "jslt",
-  "version": "0.1.0",
-  "description": "A JavaScript library",
+  "version": "0.2.0",
+  "description": "A JavaScript Library collection",
   "scripts": {
     "test": "./tests/run_all.sh"
   },
   "repository": {
     "type": "git",
-    "url": "https://code.google.com/p/jslt"
+    "url": "https://github.com/toyoshim/jslt.git"
   },
   "author": "Takashi Toyoshima <toyoshim@gmail.com>",
-  "license": "New BSD License"
+  "license": "New BSD"
 }
